--- a/lion-console/src/main/webapp/WEB-INF/web.xml
+++ b/lion-console/src/main/webapp/WEB-INF/web.xml
@@ -119,6 +119,7 @@
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.ftl</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
