--- a/lion-console/src/main/resources/config/appcontext.properties
+++ b/lion-console/src/main/resources/config/appcontext.properties
@@ -1,4 +1,4 @@
-lion-console.lion-db.url=jdbc:mysql://192.168.8.44:3306/lion?characterEncoding=UTF8
+lion-console.lion-db.url=jdbc:mysql://192.168.8.44:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
 lion-console.lion-db.username=lion
 lion-console.lion-db.password=dp!@ZUFMehRDV
 lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
