--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
 			<version>4.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.6</version>
+		</dependency>
 	</dependencies>
 </project>
