--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<version>1.3.157</version>
+		</dependency>
+		<dependency>
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
 		</dependency>
