--- a/lion-console/src/main/resources/config/appcontext.properties
+++ b/lion-console/src/main/resources/config/appcontext.properties
@@ -1,7 +1,9 @@
 lion-console.lion-db.url=jdbc:mysql://192.168.8.44:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
+#lion-console.lion-db.url=jdbc:h2:tcp://localhost/~/lion
 lion-console.lion-db.username=lion
 lion-console.lion-db.password=dp!@ZUFMehRDV
 lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
+lion-console.lion-db.driverClassName=org.h2.Driver
 lion-console.lion-db.c3p0.minSize=1
 lion-console.lion-db.c3p0.maxSize=10
 lion-console.lion-db.c3p0.initialSize=1
