--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -87,6 +87,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-json-plugin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-sitemesh-plugin</artifactId>
 		</dependency>
 		<dependency>
