重构项目结构，将service层抽取到新的lion-service项目

--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -9,4 +9,5 @@
 	<groupId>com.dianping.lion</groupId>
 	<artifactId>lion-client</artifactId>
 	<version>0.3.0</version>
+	<name>lion-client</name>
 </project>
