--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>lion-api</artifactId>
 	<version>0.0.1</version>
 	<packaging>war</packaging>
-	<name>lion's remote api</name>
+	<name>lion-api</name>
 	<dependencies>
 	</dependencies>
 	<build>
