添加部署+推送配置功能

--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -10,4 +10,16 @@
 	<artifactId>lion-client</artifactId>
 	<version>0.3.0</version>
 	<name>lion-client</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+	</dependencies>
 </project>
