--- a/lion-console/src/main/resources/freemarker.properties
+++ b/lion-console/src/main/resources/freemarker.properties
@@ -1,4 +1,8 @@
 number_format=#
+date_format=yyyy-MM-dd
+time_format=HH:mm:ss
+datetime_format=yyyy-MM-dd HH:mm:ss
+
 classic_compatible=true 
 
 default_encoding=UTF-8
