first step to finish the db module

--- a/lion-api/src/main/webapp/WEB-INF/web.xml
+++ b/lion-api/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,9 @@
 		<param-value>60000</param-value>
 	</context-param>
 	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	</listener>
+	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<context-param>
