--- a/lion-api/src/main/webapp/WEB-INF/web.xml
+++ b/lion-api/src/main/webapp/WEB-INF/web.xml
@@ -4,21 +4,76 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   <display-name>Archetype Created Web Application</display-name>
   
-  <!--由Spring载入的Log4j配置文件位置 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath*:config/spring/*.xml</param-value>
+	</context-param>
+  	<!--由Spring载入的Log4j配置文件位置 -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:config/log/log4j.xml</param-value>
+		<param-value>classpath:log/log4j.xml</param-value>
 	</context-param>
 	<!--Spring默认刷新Log4j配置文件的间隔,单位为毫秒 -->
 	<context-param>
 		<param-name>log4jRefreshInterval</param-name>
 		<param-value>60000</param-value>
 	</context-param>
+	
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+	</filter-mapping>
+	
+	<servlet>
+		<servlet-name>SetConfigServlet</servlet-name>
+		<servlet-class>com.dianping.lion.api.http.SetConfigServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>TakeEffectConfigsServlet</servlet-name>
+		<servlet-class>com.dianping.lion.api.http.TakeEffectConfigsServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RollbackConfigsServlet</servlet-name>
+		<servlet-class>com.dianping.lion.api.http.RollbackConfigsServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>GetConfigServlet</servlet-name>
+		<servlet-class>com.dianping.lion.api.http.GetConfigServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>SetConfigServlet</servlet-name>
+		<url-pattern>/setconfig</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>GetConfigServlet</servlet-name>
+		<url-pattern>/getconfig</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>TakeEffectConfigsServlet</servlet-name>
+		<url-pattern>/takeeffect</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RollbackConfigsServlet</servlet-name>
+		<url-pattern>/rollback</url-pattern>
+	</servlet-mapping>
+	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:config/spring/*.xml</param-value>
-	</context-param>
 </web-app>
