--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -13,6 +13,9 @@
 	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>lion-api</name>
+	<properties>
+		<env>dev</env>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>com.dianping.lion</groupId>
@@ -61,5 +64,14 @@
 	</dependencies>
 	<build>
 		<finalName>lion-api</finalName>
+		<filters>
+			<filter>src/main/filters/config-${env}.properties</filter>
+		</filters>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
 </project>
