--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -88,7 +88,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>lion-console</finalName>
+		<finalName>lion-console-${env}</finalName>
 		<filters>
 			<filter>src/main/filters/config-${env}.properties</filter>
 		</filters>
