添加ds-fetcher的日志

--- a/lion-api/src/main/resources/config/appcontext.properties
+++ b/lion-api/src/main/resources/config/appcontext.properties
@@ -5,3 +5,18 @@ lion-console.lion-db.driverClassName=${filter.lion-console.lion-db.driverClassNa
 lion-console.lion-db.c3p0.minSize=${filter.lion-console.lion-db.c3p0.minSize}
 lion-console.lion-db.c3p0.maxSize=${filter.lion-console.lion-db.c3p0.maxSize}
 lion-console.lion-db.c3p0.initialSize=${filter.lion-console.lion-db.c3p0.initialSize}
+
+lion-api.dbims.host=${filter.lion-api.dbims.host}
+lion-api.dbims.port=${filter.lion-api.dbims.port}
+lion-api.dbims.lionpath=${filter.lion-api.dbims.lionpath}
+lion-api.dbims.srtkey=${filter.lion-api.dbims.srtkey}
+
+lion-console.mailserver.host=${filter.lion-console.mailserver.host}
+lion-console.mailserver.port=${filter.lion-console.mailserver.port}
+
+lion-console.ldap.url=${filter.lion-console.ldap.url}
+lion-console.ldap.basedn=${filter.lion-console.ldap.basedn}
+lion-console.ldap.username=${filter.lion-console.ldap.username}
+lion-console.ldap.passwd=${filter.lion-console.ldap.passwd}
+
+lion-api.dsfetcher.cronexpr=${filter.lion-api.dsfetcher.cronexpr}
