--- a/lion-console/src/main/filters/config-alpha.properties
+++ b/lion-console/src/main/filters/config-alpha.properties
@@ -5,3 +5,11 @@ filter.lion-console.lion-db.driverClassName=
 filter.lion-console.lion-db.c3p0.minSize=
 filter.lion-console.lion-db.c3p0.maxSize=
 filter.lion-console.lion-db.c3p0.initialSize=
+
+filter.lion-console.mailserver.host=
+filter.lion-console.mailserver.port=
+
+filter.lion-console.ldap.url=
+filter.lion-console.ldap.basedn=
+filter.lion-console.ldap.username=
+filter.lion-console.ldap.passwd=
