--- a/lion-api/src/main/filters/config-dev.properties
+++ b/lion-api/src/main/filters/config-dev.properties
@@ -5,3 +5,18 @@ filter.lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
 filter.lion-console.lion-db.c3p0.minSize=1
 filter.lion-console.lion-db.c3p0.maxSize=10
 filter.lion-console.lion-db.c3p0.initialSize=1
+
+filter.lion-api.dbims.host=dev.dbims.com
+filter.lion-api.dbims.port=80
+filter.lion-api.dbims.lionpath=/lion/lion/lionapi?timestamp=
+filter.lion-api.dbims.srtkey=lionsrt1234_
+
+filter.lion-console.mailserver.host=10.1.1.51
+filter.lion-console.mailserver.port=80
+
+filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+filter.lion-console.ldap.username=lionauth
+filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
+
+filter.lion-api.dsfetcher.cronexpr=0 0/1 * * * ?
