--- a/lion-console/src/main/filters/config-product.properties
+++ b/lion-console/src/main/filters/config-product.properties
@@ -1,7 +1,15 @@
-filter.lion-console.lion-db.url=
-filter.lion-console.lion-db.username=
-filter.lion-console.lion-db.password=
-filter.lion-console.lion-db.driverClassName=
-filter.lion-console.lion-db.c3p0.minSize=
-filter.lion-console.lion-db.c3p0.maxSize=
-filter.lion-console.lion-db.c3p0.initialSize=
+filter.lion-console.lion-db.url=jdbc:mysql://10.1.1.220:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
+filter.lion-console.lion-db.username=lion
+filter.lion-console.lion-db.password=dp!@tempuser
+filter.lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
+filter.lion-console.lion-db.c3p0.minSize=5
+filter.lion-console.lion-db.c3p0.maxSize=25
+filter.lion-console.lion-db.c3p0.initialSize=10
+
+filter.lion-console.mailserver.host=10.1.1.51
+filter.lion-console.mailserver.port=80
+
+filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+filter.lion-console.ldap.username=lionauth
+filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
