--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -21,5 +21,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
