change to java mail serv

--- a/lion-api/src/main/filters/config-dev.properties
+++ b/lion-api/src/main/filters/config-dev.properties
@@ -11,8 +11,8 @@ filter.lion-api.dbims.port=80
 filter.lion-api.dbims.lionpath=/lion/lion/lionapi?timestamp=
 filter.lion-api.dbims.srtkey=lionsrt1234_
 
-filter.lion-console.mailserver.host=10.1.1.51
-filter.lion-console.mailserver.port=80
+filter.lion-console.mailservice.hosts=192.168.8.186:2008
+filter.lion-console.mailservice.weights=1
 
 filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
