--- a/lion-api/src/main/resources/config/appcontext.properties
+++ b/lion-api/src/main/resources/config/appcontext.properties
@@ -11,8 +11,8 @@ lion-api.dbims.port=${filter.lion-api.dbims.port}
 lion-api.dbims.lionpath=${filter.lion-api.dbims.lionpath}
 lion-api.dbims.srtkey=${filter.lion-api.dbims.srtkey}
 
-lion-console.mailserver.host=${filter.lion-console.mailserver.host}
-lion-console.mailserver.port=${filter.lion-console.mailserver.port}
+lion-console.mailservice.hosts=${filter.lion-console.mailservice.hosts}
+lion-console.mailservice.weights=${filter.lion-console.mailservice.weights}
 
 lion-console.ldap.url=${filter.lion-console.ldap.url}
 lion-console.ldap.basedn=${filter.lion-console.ldap.basedn}
