--- a/lion-console/src/main/filters/config-alpha.properties
+++ b/lion-console/src/main/filters/config-alpha.properties
@@ -6,8 +6,8 @@ filter.lion-console.lion-db.c3p0.minSize=
 filter.lion-console.lion-db.c3p0.maxSize=
 filter.lion-console.lion-db.c3p0.initialSize=
 
-filter.lion-console.mailserver.host=
-filter.lion-console.mailserver.port=
+filter.lion-console.mailservice.hosts=
+filter.lion-console.mailservice.weights=
 
 filter.lion-console.ldap.url=
 filter.lion-console.ldap.basedn=
