--- a/lion-api/src/main/filters/config-alpha.properties
+++ b/lion-api/src/main/filters/config-alpha.properties
@@ -11,8 +11,8 @@ filter.lion-api.dbims.port=
 filter.lion-api.dbims.lionpath=
 filter.lion-api.dbims.srtkey=
 
-filter.lion-console.mailserver.host=
-filter.lion-console.mailserver.port=
+filter.lion-console.mailservice.hosts=
+filter.lion-console.mailservice.weights=
 
 filter.lion-console.ldap.url=
 filter.lion-console.ldap.basedn=
