--- a/lion-api/src/main/filters/config-product.properties
+++ b/lion-api/src/main/filters/config-product.properties
@@ -11,8 +11,8 @@ filter.lion-api.dbims.port=
 filter.lion-api.dbims.lionpath=
 filter.lion-api.dbims.srtkey=
 
-filter.lion-console.mailserver.host=10.1.1.51
-filter.lion-console.mailserver.port=80
+filter.lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
+filter.lion-console.mailservice.weights=1,1
 
 filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
