--- a/lion-console/src/main/filters/config-product.properties
+++ b/lion-console/src/main/filters/config-product.properties
@@ -6,8 +6,8 @@ filter.lion-console.lion-db.c3p0.minSize=5
 filter.lion-console.lion-db.c3p0.maxSize=25
 filter.lion-console.lion-db.c3p0.initialSize=10
 
-filter.lion-console.mailserver.host=10.1.1.51
-filter.lion-console.mailserver.port=80
+filter.lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
+filter.lion-console.mailservice.weights=1,1
 
 filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
