--- a/lion-console/src/main/resources/config/appcontext.properties
+++ b/lion-console/src/main/resources/config/appcontext.properties
@@ -6,8 +6,8 @@ lion-console.lion-db.c3p0.minSize=${filter.lion-console.lion-db.c3p0.minSize}
 lion-console.lion-db.c3p0.maxSize=${filter.lion-console.lion-db.c3p0.maxSize}
 lion-console.lion-db.c3p0.initialSize=${filter.lion-console.lion-db.c3p0.initialSize}
 
-lion-console.mailserver.host=${filter.lion-console.mailserver.host}
-lion-console.mailserver.port=${filter.lion-console.mailserver.port}
+lion-console.mailservice.hosts=${filter.lion-console.mailservice.hosts}
+lion-console.mailservice.weights=${filter.lion-console.mailservice.weights}
 
 lion-console.ldap.url=${filter.lion-console.ldap.url}
 lion-console.ldap.basedn=${filter.lion-console.ldap.basedn}
