--- a/lion-console/src/main/filters/config-alpha.properties
+++ b/lion-console/src/main/filters/config-alpha.properties
@@ -1,15 +1,15 @@
-filter.lion-console.lion-db.url=
-filter.lion-console.lion-db.username=
-filter.lion-console.lion-db.password=
-filter.lion-console.lion-db.driverClassName=
-filter.lion-console.lion-db.c3p0.minSize=
-filter.lion-console.lion-db.c3p0.maxSize=
-filter.lion-console.lion-db.c3p0.initialSize=
+lion-console.lion-db.url=
+lion-console.lion-db.username=
+lion-console.lion-db.password=
+lion-console.lion-db.driverClassName=
+lion-console.lion-db.c3p0.minSize=
+lion-console.lion-db.c3p0.maxSize=
+lion-console.lion-db.c3p0.initialSize=
 
-filter.lion-console.mailserver.host=
-filter.lion-console.mailserver.port=
+lion-console.mailserver.host=
+lion-console.mailserver.port=
 
-filter.lion-console.ldap.url=
-filter.lion-console.ldap.basedn=
-filter.lion-console.ldap.username=
-filter.lion-console.ldap.passwd=
+lion-console.ldap.url=
+lion-console.ldap.basedn=
+lion-console.ldap.username=
+lion-console.ldap.passwd=
