change to java mail service

--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.dianping.lion</groupId>
+			<artifactId>lion-${env}</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>lion-api-${env}</finalName>
