--- a/lion-console/src/main/filters/config-alpha.properties
+++ b/lion-console/src/main/filters/config-alpha.properties
@@ -6,13 +6,8 @@ lion-console.lion-db.c3p0.minSize=
 lion-console.lion-db.c3p0.maxSize=
 lion-console.lion-db.c3p0.initialSize=
 
-<<<<<<< HEAD
-filter.lion-console.mailservice.hosts=
-filter.lion-console.mailservice.weights=
-=======
-lion-console.mailserver.host=
-lion-console.mailserver.port=
->>>>>>> c481d6f6d5f0fb0c133ba79b092ec298f2e81582
+lion-console.mailservice.hosts=
+lion-console.mailservice.weights=
 
 lion-console.ldap.url=
 lion-console.ldap.basedn=
