--- a/lion-api/src/main/filters/config-alpha.properties
+++ b/lion-api/src/main/filters/config-alpha.properties
@@ -11,13 +11,8 @@ lion-api.dbims.port=
 lion-api.dbims.lionpath=
 lion-api.dbims.srtkey=
 
-<<<<<<< HEAD
-filter.lion-console.mailservice.hosts=
-filter.lion-console.mailservice.weights=
-=======
-lion-console.mailserver.host=
-lion-console.mailserver.port=
->>>>>>> c481d6f6d5f0fb0c133ba79b092ec298f2e81582
+lion-console.mailservice.hosts=
+lion-console.mailservice.weights=
 
 lion-console.ldap.url=
 lion-console.ldap.basedn=
