--- a/lion-api/src/main/filters/config-dev.properties
+++ b/lion-api/src/main/filters/config-dev.properties
@@ -11,13 +11,8 @@ lion-api.dbims.port=80
 lion-api.dbims.lionpath=/lion/lion/lionapi?timestamp=
 lion-api.dbims.srtkey=lionsrt1234_
 
-<<<<<<< HEAD
-filter.lion-console.mailservice.hosts=192.168.8.186:2008
-filter.lion-console.mailservice.weights=1
-=======
-lion-console.mailserver.host=10.1.1.51
-lion-console.mailserver.port=80
->>>>>>> c481d6f6d5f0fb0c133ba79b092ec298f2e81582
+lion-console.mailservice.hosts=192.168.8.186:2008
+lion-console.mailservice.weights=1
 
 lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
