--- a/lion-api/src/main/filters/config-product.properties
+++ b/lion-api/src/main/filters/config-product.properties
@@ -11,13 +11,8 @@ lion-api.dbims.port=
 lion-api.dbims.lionpath=
 lion-api.dbims.srtkey=
 
-<<<<<<< HEAD
-filter.lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
-filter.lion-console.mailservice.weights=1,1
-=======
-lion-console.mailserver.host=10.1.1.51
-lion-console.mailserver.port=80
->>>>>>> c481d6f6d5f0fb0c133ba79b092ec298f2e81582
+lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
+lion-console.mailservice.weights=1,1
 
 lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
