修改lion-client的本地配置策略

--- a/lion-console/src/main/filters/config-product.properties
+++ b/lion-console/src/main/filters/config-product.properties
@@ -1,15 +1,15 @@
-lion-console.lion-db.url=jdbc:mysql://10.1.1.220:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
-lion-console.lion-db.username=lion
-lion-console.lion-db.password=dp!@tempuser
-lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
-lion-console.lion-db.c3p0.minSize=5
-lion-console.lion-db.c3p0.maxSize=25
-lion-console.lion-db.c3p0.initialSize=10
+filter.lion-console.lion-db.url=jdbc:mysql://10.1.1.220:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
+filter.lion-console.lion-db.username=lion
+filter.lion-console.lion-db.password=dp!@tempuser
+filter.lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
+filter.lion-console.lion-db.c3p0.minSize=5
+filter.lion-console.lion-db.c3p0.maxSize=25
+filter.lion-console.lion-db.c3p0.initialSize=10
 
-lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
-lion-console.mailservice.weights=1,1
+filter.lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
+filter.lion-console.mailservice.weights=1,1
 
-lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
-lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
-lion-console.ldap.username=lionauth
-lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
+filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+filter.lion-console.ldap.username=lionauth
+filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
