--- a/lion-api/src/main/filters/config-product.properties
+++ b/lion-api/src/main/filters/config-product.properties
@@ -1,22 +1,22 @@
-lion-console.lion-db.url=
-lion-console.lion-db.username=
-lion-console.lion-db.password=
-lion-console.lion-db.driverClassName=
-lion-console.lion-db.c3p0.minSize=
-lion-console.lion-db.c3p0.maxSize=
-lion-console.lion-db.c3p0.initialSize=
+filter.lion-console.lion-db.url=
+filter.lion-console.lion-db.username=
+filter.lion-console.lion-db.password=
+filter.lion-console.lion-db.driverClassName=
+filter.lion-console.lion-db.c3p0.minSize=
+filter.lion-console.lion-db.c3p0.maxSize=
+filter.lion-console.lion-db.c3p0.initialSize=
 
-lion-api.dbims.host=
-lion-api.dbims.port=
-lion-api.dbims.lionpath=
-lion-api.dbims.srtkey=
+filter.lion-api.dbims.host=
+filter.lion-api.dbims.port=
+filter.lion-api.dbims.lionpath=
+filter.lion-api.dbims.srtkey=
 
-lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
-lion-console.mailservice.weights=1,1
+filter.lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
+filter.lion-console.mailservice.weights=1,1
 
-lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
-lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
-lion-console.ldap.username=lionauth
-lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
+filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+filter.lion-console.ldap.username=lionauth
+filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
 
-lion-api.dsfetcher.cronexpr=0 0/1 * * * ?
+filter.lion-api.dsfetcher.cronexpr=0 0/1 * * * ?
