--- a/lion-console/src/main/filters/config-dev.properties
+++ b/lion-console/src/main/filters/config-dev.properties
@@ -1,15 +1,15 @@
-lion-console.lion-db.url=jdbc:mysql://192.168.8.44:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
-lion-console.lion-db.username=lion
-lion-console.lion-db.password=dp!@ZUFMehRDV
-lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
-lion-console.lion-db.c3p0.minSize=1
-lion-console.lion-db.c3p0.maxSize=10
-lion-console.lion-db.c3p0.initialSize=1
+filter.lion-console.lion-db.url=jdbc:mysql://192.168.8.44:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
+filter.lion-console.lion-db.username=lion
+filter.lion-console.lion-db.password=dp!@ZUFMehRDV
+filter.lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
+filter.lion-console.lion-db.c3p0.minSize=1
+filter.lion-console.lion-db.c3p0.maxSize=10
+filter.lion-console.lion-db.c3p0.initialSize=1
 
-lion-console.mailservice.hosts=192.168.8.186:2008
-lion-console.mailservice.weights=1
+filter.lion-console.mailservice.hosts=192.168.8.186:2008
+filter.lion-console.mailservice.weights=1
 
-lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
-lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
-lion-console.ldap.username=lionauth
-lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
+filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
+filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+filter.lion-console.ldap.username=lionauth
+filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
