--- a/lion-api/src/main/filters/config-product.properties
+++ b/lion-api/src/main/filters/config-product.properties
@@ -1,18 +1,15 @@
-filter.lion-console.lion-db.url=
-filter.lion-console.lion-db.username=
-filter.lion-console.lion-db.password=
-filter.lion-console.lion-db.driverClassName=
-filter.lion-console.lion-db.c3p0.minSize=
-filter.lion-console.lion-db.c3p0.maxSize=
-filter.lion-console.lion-db.c3p0.initialSize=
+filter.lion-console.lion-db.url=jdbc:mysql://10.1.1.220:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
+filter.lion-console.lion-db.username=lion
+filter.lion-console.lion-db.password=dp!@tempuser
+filter.lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
+filter.lion-console.lion-db.c3p0.minSize=5
+filter.lion-console.lion-db.c3p0.maxSize=25
+filter.lion-console.lion-db.c3p0.initialSize=10
 
-filter.lion-api.dbims.host=
-filter.lion-api.dbims.port=
-filter.lion-api.dbims.lionpath=
-filter.lion-api.dbims.srtkey=
-
-filter.lion-console.mailservice.hosts=10.1.2.29:2008,10.1.2.59:2008
-filter.lion-console.mailservice.weights=1,1
+filter.lion-api.dbims.host=dba.dp
+filter.lion-api.dbims.port=80
+filter.lion-api.dbims.lionpath=/lion/lion/lionapi?timestamp=
+filter.lion-api.dbims.srtkey=lionsrt1234_
 
 filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
