--- a/lion-service/pom.xml
+++ b/lion-service/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.dianping.lion</groupId>
 			<artifactId>lion-client</artifactId>
-			<version>0.3.0</version>
+			<version>0.3.0-beta</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
