添加项目成员管理权限判断

--- a/lion-api/src/main/filters/config-product.properties
+++ b/lion-api/src/main/filters/config-product.properties
@@ -1,6 +1,6 @@
 filter.lion-console.lion-db.url=jdbc:mysql://10.1.1.220:3306/lion?characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
 filter.lion-console.lion-db.username=lion
-filter.lion-console.lion-db.password=dp!@tempuser
+filter.lion-console.lion-db.password=dp!@7iJrFTTEG
 filter.lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
 filter.lion-console.lion-db.c3p0.minSize=5
 filter.lion-console.lion-db.c3p0.maxSize=25
