修改配置的编辑UI

--- a/lion-console/src/main/filters/config-alpha.properties
+++ b/lion-console/src/main/filters/config-alpha.properties
@@ -10,3 +10,5 @@ filter.lion-console.ldap.url=
 filter.lion-console.ldap.basedn=
 filter.lion-console.ldap.username=
 filter.lion-console.ldap.passwd=
+
+lion-console.log4j.console.minLevel=
