--- a/lion-console/src/main/filters/config-product.properties
+++ b/lion-console/src/main/filters/config-product.properties
@@ -10,3 +10,5 @@ filter.lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
 filter.lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
 filter.lion-console.ldap.username=lionauth
 filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
+
+lion-console.log4j.console.minLevel=OFF
