添加通用权限相关类

--- a/lion-console/src/main/filters/config-alpha.properties
+++ b/lion-console/src/main/filters/config-alpha.properties
@@ -12,3 +12,4 @@ filter.lion-console.ldap.username=
 filter.lion-console.ldap.passwd=
 
 lion-console.log4j.console.minLevel=
+lion-console.struts.devMode=
