--- a/lion-console/src/main/filters/config-dev.properties
+++ b/lion-console/src/main/filters/config-dev.properties
@@ -12,3 +12,4 @@ filter.lion-console.ldap.username=lionauth
 filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
 
 lion-console.log4j.console.minLevel=INFO
+lion-console.struts.devMode=true
