--- a/lion-console/src/main/filters/config-product.properties
+++ b/lion-console/src/main/filters/config-product.properties
@@ -12,3 +12,4 @@ filter.lion-console.ldap.username=lionauth
 filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
 
 lion-console.log4j.console.minLevel=OFF
+lion-console.struts.devMode=false
