--- a/lion-api/src/main/filters/config-dev.properties
+++ b/lion-api/src/main/filters/config-dev.properties
@@ -17,3 +17,5 @@ filter.lion-console.ldap.username=lionauth
 filter.lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
 
 filter.lion-api.dsfetcher.cronexpr=0 0/1 * * * ?
+
+lion-api.log4j.console.minLevel=INFO
