--- a/lion-api/src/main/filters/config-alpha.properties
+++ b/lion-api/src/main/filters/config-alpha.properties
@@ -17,3 +17,5 @@ filter.lion-console.ldap.username=
 filter.lion-console.ldap.passwd=
 
 filter.lion-api.dsfetcher.cronexpr=
+
+lion-api.log4j.console.minLevel=
