--- a/lion-service/pom.xml
+++ b/lion-service/pom.xml
@@ -10,6 +10,20 @@
 	<artifactId>lion-service</artifactId>
 	<version>0.0.1</version>
 	<name>lion-service</name>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/ibatis/*Test.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 	
 	<dependencies>
 		<dependency>
