Migrate service config from jm.dp to lion.dp & add group support

--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -1,14 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+
+    <parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>2.0.0</version>
+		<version>0.3.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.dianping.lion</groupId>
+
 	<artifactId>lion-client</artifactId>
-	<version>0.3.0-beta</version>
+
 	<name>lion-client</name>
 
 	<dependencies>
