--- a/lion-service/src/test/resources/config/appcontext.properties
+++ b/lion-service/src/test/resources/config/appcontext.properties
@@ -5,3 +5,8 @@ lion-console.lion-db.driverClassName=com.mysql.jdbc.Driver
 lion-console.lion-db.c3p0.minSize=1
 lion-console.lion-db.c3p0.maxSize=10
 lion-console.lion-db.c3p0.initialSize=1
+
+lion-console.ldap.url=ldap://192.168.50.11:389/DC=dianpingoa,DC=com
+lion-console.ldap.basedn=OU=Technolog Department,OU=shoffice,DC=dianpingoa,DC=com
+lion-console.ldap.username=lionauth
+lion-console.ldap.passwd=bxHxXopGJOy78Jze3LWi
