--- a/pom.xml
+++ b/pom.xml
@@ -1,70 +1,68 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<groupId>com.dianping</groupId>
-		<artifactId>dianping-parent</artifactId>
-		<version>2.0.0</version>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.dianping.lion</groupId>
-	<artifactId>lion-all</artifactId>
-	<version>2.0.0</version>
-	<packaging>pom</packaging>
-	<name>lion-all</name>
-	<organization>
-		<name>dianping</name>
-		<url>http://www.dianping.com</url>
-	</organization>
-	<modules>
-		<module>lion-client</module>
-		<module>lion-service</module>
-		<module>lion-console</module>
-		<module>lion-api</module>
-	</modules>
-	<scm>
-		<connection>scm:git:http://git.dianpingoa.com/git/lion.git</connection>
-		<developerConnection>scm:git:http://git.dianpingoa.com/git/lion.git</developerConnection>
-		<url>http://git.dianpingoa.com/git/lion.git</url>
-	</scm>
-	<issueManagement>
-		<system>bugzilla</system>
-		<url>http://dbug.dianpingoa.com/buglist.cgi?product=Lion%28%E9%85%8D%E7%BD%AE%E7%B3%BB%E7%BB%9F%29</url>
-	</issueManagement>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-				<configuration>
-					<links>
-						<link>http://download.oracle.com/javase/6/docs/api/</link>
-					</links>
-					<detectLinks>true</detectLinks>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>net.sf.ehcache</groupId>
-				<artifactId>ehcache-core</artifactId>
-				<version>2.5.2</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.4</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>1.6</version>
-		</dependency>
-	</dependencies>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>com.dianping</groupId>
+        <artifactId>dianping-parent</artifactId>
+        <version>2.0.0</version>
+    </parent>
+
+    <groupId>com.dianping.lion</groupId>
+    <artifactId>lion-all</artifactId>
+    <version>0.3.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <name>lion-all</name>
+    <organization>
+        <name>dianping</name>
+        <url>http://www.dianping.com</url>
+    </organization>
+
+    <modules>
+        <module>lion-client</module>
+        <module>lion-service</module>
+        <module>lion-console</module>
+        <module>lion-api</module>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <links>
+                        <link>http://download.oracle.com/javase/6/docs/api/</link>
+                    </links>
+                    <detectLinks>true</detectLinks>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-core</artifactId>
+                <version>2.5.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.6</version>
+        </dependency>
+    </dependencies>
 </project>
