--- a/lion-client/pom.xml
+++ b/lion-client/pom.xml
@@ -27,5 +27,10 @@
 			<artifactId>spring-beans</artifactId>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>org.jodd</groupId>
+            <artifactId>jodd-bean</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 	</dependencies>
 </project>
