Update version from 0.3.1-SNAPSHOT to 0.3.1 Update struts2 version from 2.1.6 to 2.3.15.3 Remove a trailing space in properties file which causes problem

--- a/lion-api/pom.xml
+++ b/lion-api/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <artifactId>lion-all</artifactId>
         <groupId>com.dianping.lion</groupId>
-        <version>0.3.1-SNAPSHOT</version>
+        <version>0.3.1</version>
     </parent>
 
     <artifactId>lion-api</artifactId>
     <packaging>war</packaging>
-    <version>0.3.1-SNAPSHOT</version>
 
     <name>lion-api</name>
 
