--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.3.1-SNAPSHOT</version>
+		<version>0.3.1</version>
 	</parent>
 
 	<artifactId>lion-console</artifactId>
@@ -48,6 +48,7 @@
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
+            <version>2.3.15.3</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -58,14 +59,17 @@
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-json-plugin</artifactId>
+            <version>2.3.15.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-sitemesh-plugin</artifactId>
+            <version>2.3.15.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-spring-plugin</artifactId>
+            <version>2.3.15.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
