--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     
     <groupId>com.dianping.lion</groupId>
     <artifactId>lion-all</artifactId>
-    <version>0.3.4</version>
+    <version>0.3.4.1</version>
     <packaging>pom</packaging>
 
     <name>lion-all</name>
@@ -115,6 +115,11 @@
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>20131018</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-core</artifactId>
+                <version>2.5.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
