--- a/lion-console/pom.xml
+++ b/lion-console/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<artifactId>lion-all</artifactId>
 		<groupId>com.dianping.lion</groupId>
-		<version>0.3.7-SNAPSHOT</version>
+		<version>0.3.8</version>
 	</parent>
 
 	<artifactId>lion-console</artifactId>
