--- a/lion-api/src/main/webapp/WEB-INF/web.xml
+++ b/lion-api/src/main/webapp/WEB-INF/web.xml
@@ -1,73 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-  <display-name>Archetype Created Web Application</display-name>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    <display-name>Archetype Created Web Application</display-name>
 
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:config/spring/*.xml</param-value>
-	</context-param>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:config/spring/*.xml</param-value>
+    </context-param>
   	<!--由Spring载入的Log4j配置文件位置 -->
-	<context-param>
-		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:log/log4j.xml</param-value>
-	</context-param>
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>classpath:log/log4j.xml</param-value>
+    </context-param>
 	<!--Spring默认刷新Log4j配置文件的间隔,单位为毫秒 -->
-	<context-param>
-		<param-name>log4jRefreshInterval</param-name>
-		<param-value>60000</param-value>
-	</context-param>
+    <context-param>
+        <param-name>log4jRefreshInterval</param-name>
+        <param-value>60000</param-value>
+    </context-param>
 
-	<filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>utf-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
 
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-		<dispatcher>REQUEST</dispatcher>
-		<dispatcher>FORWARD</dispatcher>
-	</filter-mapping>
+    <filter>
+        <filter-name>cat-filter</filter-name>
+        <filter-class>com.dianping.cat.servlet.CatFilter</filter-class>
+    </filter>
 
-    <servlet>  
-        <servlet-name>rest</servlet-name>  
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
-        <init-param>  
-            <param-name>contextConfigLocation</param-name>  
-            <param-value>classpath:config/spring/rest.xml</param-value>  
-        </init-param>  
-        <load-on-startup>1</load-on-startup>  
-    </servlet>  
-	<servlet>
-		<servlet-name>SetConfigServlet</servlet-name>
-		<servlet-class>com.dianping.lion.api.http.SetConfigServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>TakeEffectConfigsServlet</servlet-name>
-		<servlet-class>com.dianping.lion.api.http.TakeEffectConfigsServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>RollbackConfigsServlet</servlet-name>
-		<servlet-class>com.dianping.lion.api.http.RollbackConfigsServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>GetConfigServlet</servlet-name>
-		<servlet-class>com.dianping.lion.api.http.GetConfigServlet</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>StartJobServlet</servlet-name>
-		<servlet-class>com.dianping.lion.api.http.StartJobServlet</servlet-class>
-	</servlet>
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>cat-filter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+
+    <servlet>
+        <servlet-name>rest</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:config/spring/rest.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>SetConfigServlet</servlet-name>
+        <servlet-class>com.dianping.lion.api.http.SetConfigServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TakeEffectConfigsServlet</servlet-name>
+        <servlet-class>com.dianping.lion.api.http.TakeEffectConfigsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RollbackConfigsServlet</servlet-name>
+        <servlet-class>com.dianping.lion.api.http.RollbackConfigsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>GetConfigServlet</servlet-name>
+        <servlet-class>com.dianping.lion.api.http.GetConfigServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>StartJobServlet</servlet-name>
+        <servlet-class>com.dianping.lion.api.http.StartJobServlet</servlet-class>
+    </servlet>
     <servlet>
         <servlet-name>GetConfigDiffServlet</servlet-name>
         <servlet-class>com.dianping.lion.api.http.GetConfigDiffServlet</servlet-class>
@@ -89,30 +101,30 @@
         <servlet-class>com.dianping.lion.api.http.ConfigServlet</servlet-class>
     </servlet>
 
-    <servlet-mapping>  
-        <servlet-name>rest</servlet-name>  
-        <url-pattern>/*</url-pattern>  
+    <servlet-mapping>
+        <servlet-name>rest</servlet-name>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>SetConfigServlet</servlet-name>
-		<url-pattern>/setconfig</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>GetConfigServlet</servlet-name>
-		<url-pattern>/getconfig</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>TakeEffectConfigsServlet</servlet-name>
-		<url-pattern>/takeeffect</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>RollbackConfigsServlet</servlet-name>
-		<url-pattern>/rollback</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>StartJobServlet</servlet-name>
-		<url-pattern>/startjob</url-pattern>
-	</servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SetConfigServlet</servlet-name>
+        <url-pattern>/setconfig</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetConfigServlet</servlet-name>
+        <url-pattern>/getconfig</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TakeEffectConfigsServlet</servlet-name>
+        <url-pattern>/takeeffect</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RollbackConfigsServlet</servlet-name>
+        <url-pattern>/rollback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>StartJobServlet</servlet-name>
+        <url-pattern>/startjob</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>GetConfigDiffServlet</servlet-name>
         <url-pattern>/getconfigdiff</url-pattern>
@@ -133,11 +145,11 @@
         <servlet-name>ConfigServlet</servlet-name>
         <url-pattern>/config/*</url-pattern>
     </servlet-mapping>
-    
-	<listener>
-		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-	</listener>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 </web-app>
